# markey

./: .gitignore  README.md  package-lock.json  remove_gcode_comments.js  test_adhesion.js  test_cura.js
CNN/: best_gcode_cnn.pt  guide.md  predict.py  train_gcode_cnn.ipynb  train_gcode_cnn.py
CNN/phase1/: augment_stl.py  generate_dataset.js  upload_gcode_batch.py
CNN/phase2/: parse_gcode.py
CNN/phase2/rust_parser/: Cargo.toml  compare_parsers.py  pyproject.toml
CNN/phase2/rust_parser/src/: lib.rs
backend/: classify_gcode_vast.py  export_mesh_stl.py  gcode_86.gcode  gemini.py  render_stl_views.py  requirements-vast.txt  requirements.txt  stage_vast_model.py
customModel/data-prep/: batch-convert-gcode.js  generate-manifest.js  sanity-check.js  stl-manifest.json
customModel/data-prep/g-code-non-gun/: gcode_10047.gcode  gcode_10065.gcode  gcode_1057.gcode  gcode_1073.gcode  gcode_11283.gcode  gcode_11433.gcode  gcode_11525.gcode  gcode_11526.gcode  gcode_11527.gcode  gcode_11816.gcode  gcode_12511.gcode  gcode_12526.gcode  gcode_12569.gcode  gcode_12571.gcode  (+878 more)
customModel/finetune/: embedding_finetune.ipynb  finetune.ipynb  merge.py  requirements.txt  upload_dataset.py  xgboost_classifier.ipynb  xgboost_v2.ipynb
customModel/finishedModel/: predict_gcode.ipynb  predict_gcode.py  requirements.txt  server.py
frontend/: package-lock.json  package.json
frontend/patches/: three+0.183.2.patch
frontend/public/: gundiagram.gltf
slicer/: convert.js  fdmprinter.def.json  output.gcode
splicer/: convert.js  fdmprinter.def.json  output.gcode  worker.js
(+2116 files in other folders)
