[package]
name = "markey_gcode_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "markey_gcode_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ryu = "1.0"
fast-float = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
